fix: tag spacing in footer

--- a/themes/paprika/assets/app.css
+++ b/themes/paprika/assets/app.css
@@ -440,6 +440,7 @@ img {
 
 .post-tags a + a {
   margin-left: 0.5rem;
+  margin-bottom: 0.8rem;
 }
 
 .post-nav {
